--- a/index.html
+++ b/index.html
@@ -55,46 +55,46 @@
                 <article id="map" class="page content">
                     <div class="col-1">
                         <button class="primary block">All<br>▾</button>
+
+                        <div class="button-group vertical block light">
+                            <button>+</button>
+                            <button>|<br>|<br>|<br>|<br>|<br>|<br>|<br>|<br></button>
+                            <button>-</button>
+                        </div>
                     </div>
-                    <div class="col-flex">
-                        <form>
-                            <fieldset>
-                                <legend>Hello</legend>
-                                <div class="button-group vertical">
-                                    <button>button 1</button>
-                                    <button>button 2 longer</button>
-                                    <button>button 3</button>
+                </article>
+                <article class="page" id="location">
+                    <div class="col-8"></div>
+                    <div class="col-4" id="location-sidebar">
+                        <header class="row-3 content">
+                            <h1>Paris, France</h1>
+                            <div class="row">
+                                <div class="col-8">
+                                    <ul>
+                                        <li>2 Nights in a 3-Star Hotel</li>
+                                        <li>Round Trip Flight</li>
+                                        <li>2 Adults</li>
+                                    </ul>
                                 </div>
-                                <div class="field">
-                                    <div class="button-group vertical light">
-                                        <input type="checkbox" name="rg" id="r1">
-                                        <label class="button" for="r1">checkbox 1</label>
-                                        <input type="checkbox" name="rg" id="r2">
-                                        <label class="button" for="r2">checkbox 2</label>
-                                        <input type="checkbox" name="rg" id="r3">
-                                        <label class="button" for="r3">checkbox 3</label>
-                                        <input type="checkbox" name="rg" id="r4">
-                                        <label class="button" for="r4">checkbox 4</label>
-                                    </div>
+                                <div class="col-4">
+                                    <h2 class="align-right"><small>USD</small><br>$450</h2>
                                 </div>
-                                <div class="field">
-                                    <div class="button-group secondary">
-                                        <button>≤</button>
-                                        <input type="radio" name="pg" id="p1">
-                                        <label for="p1">1</label>
-                                        <input type="radio" name="pg" id="p2">
-                                        <label for="p2">2</label>
-                                        <input type="radio" name="pg" id="p3">
-                                        <label for="p3">3</label>
-                                        <input type="radio" name="pg" id="p4">
-                                        <label for="p4">4</label>
-                                        <input type="radio" name="pg" id="p5">
-                                        <label for="p5">5</label>
-                                        <button>≥</button>
-                                    </div>
-                                </div>
-                            </fieldset>
-                        </form>
+                            </div>
+                        </header>
+                        <div class="row">
+                            <nav class="horizontal">
+                                <ul>
+                                    <li><a href="#">The City</a></li>
+                                    <li><a href="#">The Hotel</a></li>
+                                    <li><a href="#">The Flight</a></li>
+                                </ul>
+                            </nav>
+                            <div class="row content">
+                                <h2>About Paris</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, incidunt, culpa, temporibus eaque recusandae officiis fuga autem quas velit dolore illum repudiandae quia. Repellendus fugit blanditiis quisquam minus perspiciatis! Dignissimos.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, optio, incidunt, nisi aspernatur assumenda iste fugiat iure nam consequatur quis culpa nostrum dignissimos est temporibus commodi vero laboriosam obcaecati repellat!</p>
+                            </div>
+                        </div>
                     </div>
                 </article>
             </section> 
@@ -104,7 +104,7 @@
                         <h3 class="stacked">Welcome to</h3>
                         <h1>Innovation<br>Airlines</h1>
                     </header>
-                    <section class="row-7 content">
+                    <section class="row-flex content">
                         <form>
                             <fieldset>
                                 <legend><h3>Book a flight</h3></legend>
@@ -118,13 +118,7 @@
                                 </div>
                             </fieldset>
                         </form>
-                        <div class="col-3">hi</div>
-                        
                     </section>
-                    <footer class="row-2 content">
-                        <h3 class="stacked">We offer amazing deals<br>around the world.</h3>
-                        <h6>Scroll down to find out more.</h6>
-                    </footer>
                 </article>
             </section>
         </article>
