--- a/index.html
+++ b/index.html
@@ -81,18 +81,19 @@
                                 </div>
                             </div>
                         </header>
-                        <div class="row">
-                            <nav class="horizontal">
-                                <ul>
-                                    <li><a href="#">The City</a></li>
-                                    <li><a href="#">The Hotel</a></li>
-                                    <li><a href="#">The Flight</a></li>
-                                </ul>
-                            </nav>
-                            <div class="row content">
+                        <nav class="row-1 horizontal">
+                            <ul>
+                                <li><a href="#">The City</a></li>
+                                <li><a href="#">The Hotel</a></li>
+                                <li><a href="#">The Flight</a></li>
+                            </ul>
+                        </nav>
+                        <div class="row-8 content scroll">
+                            <div class="">
                                 <h2>About Paris</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, incidunt, culpa, temporibus eaque recusandae officiis fuga autem quas velit dolore illum repudiandae quia. Repellendus fugit blanditiis quisquam minus perspiciatis! Dignissimos.</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, optio, incidunt, nisi aspernatur assumenda iste fugiat iure nam consequatur quis culpa nostrum dignissimos est temporibus commodi vero laboriosam obcaecati repellat!</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, qui, esse, beatae nemo commodi enim ducimus laboriosam nulla quae culpa nihil reprehenderit corporis architecto dicta quod ullam optio. Vel, quae!</p>
                             </div>
                         </div>
                     </div>
