--- a/training.html
+++ b/training.html
@@ -7,58 +7,88 @@
     <link rel="stylesheet" href="css/train.css">
 </head>
 <body>
-    <header>
-        <div class="col-4 content" id="logo">
-            <h2>TRAIN-X</h2>
+    <aside class="col-2">
+        <br>
+        <h1 class="align-center">TRAINX</h1>
+        <div id="profile" class="row-3 align-center content">
+            <figure></figure>
+            <br>
+            <h6>John Johnson</h6>
         </div>
-        <div class="col-8 content" id="nav">
-            <ul class="inline valign-center">
-                <li>About</li>
-                <li>Pricing</li>
-                <li>FAQs</li>
-                <li>Training</li>
-                <li>Contact</li>
+        <nav>
+            <ul>
+                <li><a href="#">WORKOUTS</a></li>
+                <li><a href="#">GOALS</a></li>
+                <li><a href="#">CALENDAR</a></li>
+                <li><a href="#">COACH</a></li>
+                <li><a href="#">PROFILE</a></li>
             </ul>
-        </div>
-    </header>
-    <section id="hero" class="row-8">
-        <div class="col-4 content" id="left">
-            <div class="col-12 col-8-large col-right-large" id="left_content">
-                <header class="row content"><h2 class="inline">Log In</h2> <button class="small inline right light">Sign Up</button></header>
-                <div class="row content">
-                    <input type="text" class="full" id="" placeholder="Username">
-                    <input type="password" class="full" id="" placeholder="Password">
-                    <button class="transparent right light">Log In</button>
-                    <button class="dark">dark</button>
-                    <button class="primary">primary</button>
-                    <button class="secondary">secondary</button>
-                    <smalL><a id="forgot_password">Forgot Password?</a></small>
+        </nav>
+    </aside>
+    <section class="col-flex scroll">
+        <header class="row-1 content">
+            <nav class="horizontal">
+                <ul>
+                    <li><a href="">LINK 1</a></li>
+                    <li><a href="">LINK 2</a></li>
+                    <li><a href="">LINK 3</a></li>
+                    <li><a href="">LINK 4</a></li>
+                    <li><a href="">LINK 5</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="row-flex" id="content">
+            <div id="workout" class="content">
+                <hgroup>                
+                    <h6>Workout View</h6>
+                    <h1>Monday, Feb. 3rd</h1>
+                </hgroup>
+                <div class="row-4"></div>
+                <br>
+                <div class="row">
+                    <div class="col-6"><h6>Goals</h6></div>
+                    <div class="col-6">
+                        <span class="label light">MONTH</span>
+                        <span class="label primary">WEEK</span>
+                        <span class="label light">DAY</span>
+                    </div>
                 </div>
-
+                <hgroup>
+                    <h3>Distance Ran: <span class="alpha">3.14 mi</span> / <span class="omega">30 mi</span></h3>
+                    <h3>Average Pace: <span class="alpha">7:06 min/mi</span> / <span class="omega">6:55 min/mi</span></h3>
+                </hgroup>
+                <br>
+                <h6>Today's Workout  <div class="badge">3</div></h6>
+                <ul class="clean">
+                    <li>
+                        <span>5 x two min. at goal 5K pace</span>
+                        <ul>
+                            <li><small>Jog for 90 sec. to recover between intervals</small></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>6 x 800 meters on the track at goal 5K pace</span>
+                        <ul>
+                            <li><small>Jog 500 meters for recovery</small></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>3 x 1-mile run on the track at goal 5K pace</span>
+                        <ul>
+                            <li><small>Jog 1 min. to recover between sets</small></li>
+                        </ul>
+                    </li>
+                </ul>
+                <br>
+                <h6>Coach's Notes  <div class="badge">2</div></h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, eum, eligendi id quis nesciunt necessitatibus cum distinctio fuga labore laudantium. Nesciunt dolor sapiente tempora obcaecati veritatis neque id placeat aut.</p>
+                <p>Listen, you promise me something, OK? Just if you're ever in trouble, don't be brave. You just run, OK? Just run away.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptate, molestiae, veritatis sint sunt quae adipisci provident voluptatum blanditiis quas maiores ullam fugiat autem esse rem cumque odit delectus dolorem.</p>
             </div>
-        </div>
-        <div class="col-8 content" id="right">
-            <h1><br>Get professional training schedules<br>from <strong>anywhere, anytime.</strong></h1>
-            <h3>It's like hiring a professional trainer for a fraction of the price. Someone else should write the catchy marketing slogans.</h3>
-            <button class="large secondary">Start Training!</button>
-        </div>
+            <div id="calendar" class="content">
+                <div>hi</div>
+            </div>
+        </section>
     </section>
-    <section id="info" class="row-8">
-        <div class="col-6 col-12-small row-6-small content" id="foo">
-            <button class="primary">primary</button>
-            <button class="secondary">secondary</button>
-            <button class="light">light</button>
-            <button class="dark">dark</button>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, architecto, perspiciatis optio eveniet unde quas modi dolores ducimus nisi consequatur at esse quod distinctio voluptate similique nesciunt error earum officia!</p>
-        </div>
-        <div class="col-6 col-12-small row-6-small content" id="bar">
-            <button class="primary">primary</button>
-            <button class="secondary">secondary</button>
-            <button class="light">light</button>
-            <button class="dark">dark</button>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, magni, non dolore molestiae quos cupiditate modi error labore iusto quisquam harum fugiat eaque aliquid nam possimus quaerat optio odio sunt!</p>
-        </div>
-    </section>
-    <footer></footer>
 </body>
 </html>
