--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="min">
         <div class="page" id="header-1">
             <div class="col-8 col-9-large">
                 <form class="full"><input type="text" text="" class="full large" placeholder="Search Flights, Promotions, and Travel tips"></form>
@@ -124,6 +124,7 @@
             </section>
         </article>
     </section>
+    <section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, cumque pariatur nam saepe suscipit sit dolor illum ex deserunt perspiciatis. Quasi, quia, incidunt earum laudantium molestiae quos minus asperiores sunt.</section>
     <footer>
         <div class="page" id="footer-1">
             <nav class="col-8 col-9-large horizontal full secondary">
