--- a/training.html
+++ b/training.html
@@ -6,26 +6,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/train.css">
 </head>
-<body>
-    <aside class="col-2">
-        <br>
-        <h1 class="align-center">TRAINX</h1>
-        <div id="profile" class="row-3 align-center content">
-            <figure></figure>
-            <br>
-            <h6>John Johnson</h6>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">WORKOUTS</a></li>
-                <li><a href="#">GOALS</a></li>
-                <li><a href="#">CALENDAR</a></li>
-                <li><a href="#">COACH</a></li>
-                <li><a href="#">PROFILE</a></li>
-            </ul>
-        </nav>
+<body class="page">
+    <aside class="col-4">
+        <div class="row-4 row-center">blah</div>
     </aside>
-    <section class="col-flex scroll">
+    <section class="col-flex">
         <header class="row-1 content">
             <nav class="horizontal">
                 <ul>
@@ -86,7 +71,25 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptate, molestiae, veritatis sint sunt quae adipisci provident voluptatum blanditiis quas maiores ullam fugiat autem esse rem cumque odit delectus dolorem.</p>
             </div>
             <div id="calendar" class="content">
-                <div>hi</div>
+                <nav class="col-6">
+                    <ul>
+                        <li><a href="#">link 1</a></li>
+                        <li><a href="#">link 2</a></li>
+                        <li>
+                            <a href="#">link 3</a>
+                            <ul>
+                                <li>asdf</li>
+                                <li>dfdwf</li>
+                                <li>sdfsfd</li>
+                                <li>sdfa</li>
+                                <li>asdf</li>
+                            </ul>
+                        </li>
+                        <li><a href="#">link 4</a></li>
+                        <li><a href="#">link 5</a></li>
+                        <li><a href="#">link 6</a></li>
+                    </ul>
+                </nav>
             </div>
         </section>
     </section>
