--- a/arx.html
+++ b/arx.html
@@ -5,30 +5,34 @@
     <title>iAssist - a Product of AssistRX</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/iassist.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
 </head>
 <body class="row-12 scroll">
     <header class="content">
-        <div id="header_logo" class="col-5"></div>
-        <div id="header_nav" class="col-6">
-            <nav class="horizontal full">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">News</a></li>
-                    <li><a href="">Assistance</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="col-1">
-            <button class="valign-center secondary">Login</button>
-        </div>
+        <article class="page">
+            <div id="header_logo" class="col-5"></div>
+            <div id="header_nav" class="col-6">
+                <nav class="horizontal full">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Products</a></li>
+                        <li><a href="">News</a></li>
+                        <li><a href="">Assistance</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-1">
+                <button id="login_button" class="valign-center secondary">Login</button>
+            </div>
+        </article>
     </header>
     <section id="view1" class="row-12 content align-center">
         <article class="page">
             <br><br><br><br> <br>
             <h1>Technology that improves patient access <br>to Specialty Therapies.</h1>
-            <h2>Introducting iAssist&reg;</h2>
+            <h2>Introducting <span class="iassist">iAssist</span>&reg;</h2>
             <figure class="col-8 col-center col-inline">
                 <img src="https://www.iassist.com/images/backgrounds/slider/ipad_img2.png" alt="" height="240" style="float:right;">
             </figure>
@@ -42,67 +46,77 @@
                 <form action="">
                     <fieldset>
                         <h2>Login to Assist-Rx</h2>
-                        <div class="field">
+                        <div class="field topfix">
                             <input type="text" name="" id="" placeholder="Email Address">
                         </div>
-                        <div class="field">
+                        <div class="field bottomfix">
                             <input type="password" name="" id="" placeholder="Password">
                         </div>
                         <br>
-                        <button class="block secondary">Login</button>
+                        <button class="secondary">Login</button><a href="#" class="button link">Forgot Password?</a>
                     </fieldset>
                 </form>
             </div>
         </article>
     </section>
     <section class="row-12 content align-center" id="view2">
-        <div class="col-8 col-center">        
-            <h1>Accurate.</h1>
-            <p>AssistRx® has leveraged over 50 years of combined experience in the specialty pharmaceutical industry to create this innovative technology. iAssist provides patients with access to therapies faster, offering Healthcare Providers the opportunity to start the subscription submission process at the point of care.</p>
-            <h1>Efficient.</h1>
-            <p>With iAssist, practices will avoid the unnecessary and repetitive effort involved with paperwork and follow up. iAssist dramatically improves the efficiency of prescribing specialty therapies offering access to user friendly features which promote transparency and communication throughout the prescription process. </p>
-            <h1>Specialized.</h1>
-            <p>iAssist is a state-of-the-art technology that simplifies the prescribing process of specialty therapies, streamlining communication between key stakeholders; prescribers, pharmacies, patients and manufacturers. iAssist provides what is crucial to every specialty prescription – accuracy, adherence and, most importantly, speed to therapy.</p>
-        </div>
+        <article class="page">
+            <div class="col-8 col-center">        
+                <h1>Accurate.</h1>
+                <p>AssistRx® has leveraged over 50 years of combined experience in the specialty pharmaceutical industry to create this innovative technology. iAssist provides patients with access to therapies faster, offering Healthcare Providers the opportunity to start the subscription submission process at the point of care.</p>
+                <h1>Efficient.</h1>
+                <p>With iAssist, practices will avoid the unnecessary and repetitive effort involved with paperwork and follow up. iAssist dramatically improves the efficiency of prescribing specialty therapies offering access to user friendly features which promote transparency and communication throughout the prescription process.</p>
+                <h1>Specialized.</h1>
+                <p>iAssist is a state-of-the-art technology that simplifies the prescribing process of specialty therapies, streamlining communication between key stakeholders; prescribers, pharmacies, patients and manufacturers. iAssist provides what is crucial to every specialty prescription – accuracy, adherence and, most importantly, speed to therapy.</p>
+            </div>
+        </article>
     </section>
     <footer class="row-4">
-        <div class="col-3 content col-inline">
-            <h6>Contact Us</h6>
-            <ul class="clean">
-                <li><strong>Phone</strong> 855.421.4607</li>
-                <li><strong>Fax</strong> 855.285.0716</li>
-            </ul>
-        </div>
-        <div class="col-3 content col-inline">
-            <h6>Locate Us</h6>
-            <ul class="clean">
-                <li>4700 Millenia Blvd.</li>
-                <li>Suite 500</li>
-                <li>Orlando, FL 32839</li>
-            </ul>
-        </div>
-        <div class="col-3 content col-inline">
-            <h6>Follow Us</h6>
-            <ul class="clean">
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">LinkedIn</a></li>
-            </ul>
-        </div>
-        <div class="col-3 content col-inline">
-            <h6>Links</h6>
-            <ul class="clean">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Assistance</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Site Map</a></li>
-            </ul>
-        </div>
-        <div class="row content">
-            <span>Copyright &copy; 2013 AssistRX - Designed by David Khourshid</span>
-        </div>
+        <article class="page">
+            <div class="col-3 content col-inline">
+                <h6>Contact Us</h6>
+                <ul class="clean">
+                    <li><strong>Phone</strong> 855.421.4607</li>
+                    <li><strong>Fax</strong> 855.285.0716</li>
+                </ul>
+            </div>
+            <div class="col-3 content col-inline">
+                <h6>Locate Us</h6>
+                <ul class="clean">
+                    <li>4700 Millenia Blvd.</li>
+                    <li>Suite 500</li>
+                    <li>Orlando, FL 32839</li>
+                </ul>
+            </div>
+            <div class="col-3 content col-inline">
+                <h6>Follow Us</h6>
+                <ul class="clean">
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                </ul>
+            </div>
+            <div class="col-3 content col-inline">
+                <h6>Links</h6>
+                <ul class="clean">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Assistance</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Site Map</a></li>
+                </ul>
+            </div>
+            <div class="row content">
+                <span>Copyright &copy; 2013 AssistRX - Designed by David Khourshid</span>
+            </div>
+        </article>
     </footer>
 </body>
+<script>
+$('#login').hide();
+    $('#login_button').click(function(){
+        $('#login').fadeToggle();
+    })
+</script>
 </html>
