Adding gutter support

--- a/training.html
+++ b/training.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="css/train.css">
 </head>
 <body class="page">
-    <aside class="col-4">
-        <div class="row-4 row-center">blah</div>
+    <aside class="col-4 row-gutter">
+        <div class="row-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia officiis dolorum fugit possimus eius deleniti nihil. Laborum, vero non blanditiis. Odio, dicta, minus nam temporibus laborum fugit totam eum veritatis.</div>
+        <div class="row-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, magni, odit, pariatur quam ullam ex hic inventore reiciendis asperiores similique repellendus provident culpa assumenda labore aperiam at nisi recusandae qui!</div>
+        <div class="row-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, id, cupiditate numquam molestiae reiciendis culpa quasi laboriosam perspiciatis nesciunt nobis vel at natus hic rerum nisi neque porro? Debitis, voluptatem.</div>
     </aside>
     <section class="col-flex">
         <header class="row-1 content">
@@ -22,8 +24,11 @@
                 </ul>
             </nav>
         </header>
-        <section class="row-flex" id="content">
-            <div id="workout" class="content">
+        <section class="row-flex col-gutter" id="content">
+            <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, autem, error accusantium commodi alias laborum molestias excepturi nostrum doloribus quis nisi laudantium fugiat et odit aliquam? Sequi sunt dolorem vel.</div>
+            <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, eius animi eaque impedit veritatis dolorem vitae maxime consequatur natus ex earum nemo cum sed a officia ullam provident iusto neque.</div>
+            <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, non, ipsa, impedit nobis totam sit incidunt rerum vitae consequuntur ea odio deserunt consectetur dolore beatae voluptatum. Dignissimos iure in a.</div>
+            <div id="workout" class="content hide">
                 <hgroup>                
                     <h6>Workout View</h6>
                     <h1>Monday, Feb. 3rd</h1>
@@ -69,27 +74,6 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, eum, eligendi id quis nesciunt necessitatibus cum distinctio fuga labore laudantium. Nesciunt dolor sapiente tempora obcaecati veritatis neque id placeat aut.</p>
                 <p>Listen, you promise me something, OK? Just if you're ever in trouble, don't be brave. You just run, OK? Just run away.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptate, molestiae, veritatis sint sunt quae adipisci provident voluptatum blanditiis quas maiores ullam fugiat autem esse rem cumque odit delectus dolorem.</p>
-            </div>
-            <div id="calendar" class="content">
-                <nav class="col-6">
-                    <ul>
-                        <li><a href="#">link 1</a></li>
-                        <li><a href="#">link 2</a></li>
-                        <li>
-                            <a href="#">link 3</a>
-                            <ul>
-                                <li>asdf</li>
-                                <li>dfdwf</li>
-                                <li>sdfsfd</li>
-                                <li>sdfa</li>
-                                <li>asdf</li>
-                            </ul>
-                        </li>
-                        <li><a href="#">link 4</a></li>
-                        <li><a href="#">link 5</a></li>
-                        <li><a href="#">link 6</a></li>
-                    </ul>
-                </nav>
             </div>
         </section>
     </section>
