Allowing extensions for alerts

--- a/training.html
+++ b/training.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/train.css">
 </head>
 <body class="page">
-    <aside class="col-4 row-gutter">
-        <div class="row-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia officiis dolorum fugit possimus eius deleniti nihil. Laborum, vero non blanditiis. Odio, dicta, minus nam temporibus laborum fugit totam eum veritatis.</div>
-        <div class="row-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, magni, odit, pariatur quam ullam ex hic inventore reiciendis asperiores similique repellendus provident culpa assumenda labore aperiam at nisi recusandae qui!</div>
-        <div class="row-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, id, cupiditate numquam molestiae reiciendis culpa quasi laboriosam perspiciatis nesciunt nobis vel at natus hic rerum nisi neque porro? Debitis, voluptatem.</div>
+    <aside class="col-4 rows-gutter">
+        <div class="row-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia officiis dolorum fugit possimus eius deleniti nihil. Laborum, vero non blanditiis. Odio, dicta, minus nam temporibus laborum fugit totam eum veritatis.</div></div>
+        <div class="row-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, magni, odit, pariatur quam ullam ex hic inventore reiciendis asperiores similique repellendus provident culpa assumenda labore aperiam at nisi recusandae qui!</div></div>
+        <div class="row-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, id, cupiditate numquam molestiae reiciendis culpa quasi laboriosam perspiciatis nesciunt nobis vel at natus hic rerum nisi neque porro? Debitis, voluptatem.</div></div>
     </aside>
     <section class="col-flex">
         <header class="row-1 content">
@@ -24,10 +24,10 @@
                 </ul>
             </nav>
         </header>
-        <section class="row-flex col-gutter" id="content">
-            <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, autem, error accusantium commodi alias laborum molestias excepturi nostrum doloribus quis nisi laudantium fugiat et odit aliquam? Sequi sunt dolorem vel.</div>
-            <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, eius animi eaque impedit veritatis dolorem vitae maxime consequatur natus ex earum nemo cum sed a officia ullam provident iusto neque.</div>
-            <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, non, ipsa, impedit nobis totam sit incidunt rerum vitae consequuntur ea odio deserunt consectetur dolore beatae voluptatum. Dignissimos iure in a.</div>
+        <section class="row columns-gutter" id="content">
+            <div class="col-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, autem, error accusantium commodi alias laborum molestias excepturi nostrum doloribus quis nisi laudantium fugiat et odit aliquam? Sequi sunt dolorem vel.</div></div>
+            <div class="col-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, eius animi eaque impedit veritatis dolorem vitae maxime consequatur natus ex earum nemo cum sed a officia ullam provident iusto neque.</div></div>
+            <div class="col-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, non, ipsa, impedit nobis totam sit incidunt rerum vitae consequuntur ea odio deserunt consectetur dolore beatae voluptatum. Dignissimos iure in a.</div></div>
             <div id="workout" class="content hide">
                 <hgroup>                
                     <h6>Workout View</h6>
@@ -75,6 +75,14 @@
                 <p>Listen, you promise me something, OK? Just if you're ever in trouble, don't be brave. You just run, OK? Just run away.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptate, molestiae, veritatis sint sunt quae adipisci provident voluptatum blanditiis quas maiores ullam fugiat autem esse rem cumque odit delectus dolorem.</p>
             </div>
+        </section>
+        <section class="row-12 content">
+            <div class="button-group">
+                <button>#1</button>
+                <button>#2</button>
+                <button>#3</button>
+            </div>
+            <div class="alert">Oh hey there!!</div>
         </section>
     </section>
 </body>
