Lots of changes. I'll try to make my commits more concise in the future.

--- a/arx.html
+++ b/arx.html
@@ -62,13 +62,13 @@
     <section class="row-12 content align-center" id="view2">
         <article class="page">
             <div class="col-8 col-center">        
-                <h1>Accurate.</h1>
-                <p>AssistRx® has leveraged over 50 years of combined experience in the specialty pharmaceutical industry to create this innovative technology. iAssist provides patients with access to therapies faster, offering Healthcare Providers the opportunity to start the subscription submission process at the point of care.</p>
-                <h1>Efficient.</h1>
-                <p>With iAssist, practices will avoid the unnecessary and repetitive effort involved with paperwork and follow up. iAssist dramatically improves the efficiency of prescribing specialty therapies offering access to user friendly features which promote transparency and communication throughout the prescription process.</p>
-                <h1>Specialized.</h1>
-                <p>iAssist is a state-of-the-art technology that simplifies the prescribing process of specialty therapies, streamlining communication between key stakeholders; prescribers, pharmacies, patients and manufacturers. iAssist provides what is crucial to every specialty prescription – accuracy, adherence and, most importantly, speed to therapy.</p>
+                <div class="button-group">
+                    <button>button 1</button>
+                    <button>button 2</button>
+                    <button>button 3</button>
+                </div>
             </div>
+            
         </article>
     </section>
     <footer class="row-4">
